fix builder navbutton spacing (bottom)

--- a/src/app/shared/components/competency-builder/competency-builder.component.scss
+++ b/src/app/shared/components/competency-builder/competency-builder.component.scss
@@ -32,7 +32,7 @@
 
 
       .content {
-        margin-bottom: 90px;
+        margin-bottom: 95px;
       }
 
 
@@ -41,7 +41,7 @@
         justify-content: space-between;
         position: fixed;
         bottom: 0px;
-        padding: 20px 0;
+        padding: 20px 0 25px 0;
         width: 585px;
         background-color: white;
         z-index: 3;
